--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ai-buddy",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "middleware.js",
   "scripts": {
     "start": "node middleware.js",
     "test": "echo \"Error: no test specified\" && exit 1"
